--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.10.2"
+    "react-navigation": "^3.10.2",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
