--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "react-devtool": "react-devtools"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.10.2",
-    "axios": "^0.18.0"
+    "react-navigation": "^3.10.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -20,6 +23,7 @@
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
+    "react-devtools": "^3.6.1",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
