--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-devtool": "react-devtools"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.4.0",
     "axios": "^0.18.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
